2010-01-27  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/CharacterVector.h: CharacterVector::StringProxy
	gains implicit conversion to std::string

	* src/Rcpp/Environment.h: removed the static 
	Environment::RCPP_NAMESPACE which caused problems when 
	embedding R

	* src/Rcpp/RObject.h: RObject::AttributeProxy::operator RObject
	replaced by templated implicit conversion operator, delegating the
	actual work to as<>.

	* src/Environment.h: Binding::operator RObject is removed since
	it can be automatically generated by the templated implicit
	conversion operator

	* man/RcpUnitTests.Rd: fix html rendering

	* inst/doc/Makefile: clean the index.html file before copying it

2010-01-26  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppDatetime.cpp: New SEXP-based constructor
	* src/RcppDatetime.h: idem, bug fix for operator-

	* src/RcppDate.h: new accessor getJulian() [relative to epoch
	  just like R's julian()] to complement getJDN()

	* inst/unitTests/runit.RcppDatetime.R: added

2010-01-26  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/clone.h: explicit cloning of RObjects. The clone
	template function creates a new object of the same class
	as the object it is passed in, encapsulating a duplicate
	of the SEXP contained by the input RObject.

	* src/Rcpp/r_cast.h: new template function to handle casts
	from one SEXP to another. This is mostly useful internally

	* src/Rcpp/VectorBase.h: VectorBase gains a offset method
	that is responsible to calculate the correct offset based
	on variable number of size_t arguments. currently the number
	of arguments can be 1 (vector indexing) and 2 (matrix indexing)
	but arbitrary number of arguments will be added later
	for arbitrary array-like indexing.

	* src/Rcpp/SimpleVector.h: outsourcing offset calculation
	to VectorBase::offset

	* src/Rcpp/CharacterVector.h: use offset to implement matrix-like
	indexing for matrices of strings

	* inst/unitTests/runit.CharacterVector.R: unit test for matrix